--- a/ComplexGraphing.vcxproj
+++ b/ComplexGraphing.vcxproj
@@ -148,6 +148,17 @@
   <ItemGroup>
     <ClInclude Include="main.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="compute.comp">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="fragment.frag">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="vertex.vert">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
